--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,12 @@ body {
     width: 100%;
     height: 200px;
     margin-bottom: 24px;
+    transition: opacity 0.5s ease-in-out;
+
+    &:hover {
+      opacity: 0.8;
+      cursor: pointer;
+    }
   }
 
   &__img {
