--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 body {
   font-family: 'Open Sans', sans-serif;
   background-color: lightgray;
+  box-sizing: border-box;
 }
 
 // -------------------------------------------
@@ -66,6 +67,148 @@ body {
 
     @media screen and (max-width: 768px) {
       grid-template-columns: 1fr;
+    }
+  }
+}
+
+// -------------------------------------------
+// Tech Spec Card
+// -------------------------------------------
+
+.tech-spec-card {
+  width: 100%;
+  height: 450px;
+  outline: 1px solid lightgray;
+  text-align: center;
+  position: relative;
+
+  @media screen and (max-width: 768px) {
+    height: 350px;
+  }
+  
+
+  &__link-wrap {
+    text-decoration: none;
+    color: black;
+    width: 100%;
+    height: 450px;
+    display: grid;
+    align-items: center;
+    align-content: center;
+    transition: all .6s ease-in-out;
+
+    &:hover{
+      color: rgb(255, 255, 255);
+      border-color: transparent;
+      background-color: rgb(87, 88, 97);
+    }
+
+    &:hover .tech-spec-card__no-svg {
+      color: rgb(148, 178, 235);
+      border-color: rgb(148, 178, 235);
+    }
+
+    @media screen and (max-width: 768px) {
+      height: 350px;
+    }
+  }
+
+ 
+
+  &__icon-container {
+    font-size: 2rem;
+    margin-bottom: 10px;
+  }
+
+  &__title {
+    font-size: 1.4rem;
+    font-weight: 600;
+    margin-bottom: 35px;
+  }
+
+  &__description {
+    margin: 0 20px;
+    font-weight: 400;
+    font-size: 1.1rem;
+    margin-bottom: 40px;
+  }
+
+  &__no-svg {
+    border-bottom: 1px solid rgb(5, 51, 184);
+    color: rgb(5, 51, 184);
+    display: inline;
+    font-weight: 500;
+  }
+
+  &__has-svg {
+    font-size: 3rem;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+    padding: 0 35px;
+
+    @media screen and (max-width: 768px) {
+      justify-items: center;
+      padding: 0 200px;
+    }
+  }
+}
+
+
+
+
+// -------------------------------------------
+// Tech Spec Section
+// -------------------------------------------
+
+.tech-specs {
+  
+  background-color: rgb(244, 244, 246);
+
+  // Potential issue from around here
+  padding: 98px 30px;
+  position: absolute;
+
+  
+
+  &__list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    align-items: center;
+    padding: 0 8rem;
+
+
+    @media screen and (min-width: 1031px) and (max-width: 1350px) {
+      padding: 0 4rem;
+    }
+
+
+    @media screen and (max-width: 1030px) {
+      grid-template-columns: repeat(2, 1fr);
+      padding: 0;
+
+      .tech-spec-card:last-child {
+        grid-column: 1 / 3;
+        justify-self: center;
+        width: 450px;
+      }
+    }
+    @media screen and (max-width: 768px) {
+      grid-template-columns: 1fr;
+      padding: 0;
+
+      .tech-spec-card:first-child {
+        grid-column: 1 / 3;
+        width: 100%;
+      }
+      .tech-spec-card:nth-child(2) {
+        width: 100%;
+        grid-column: 1 / 3;
+      }
+      .tech-spec-card:last-child {
+        width: 100%;
+      }
     }
   }
 }
