--- a/src/App.scss
+++ b/src/App.scss
@@ -113,8 +113,6 @@ body {
     }
   }
 
- 
-
   &__icon-container {
     font-size: 2rem;
     margin-bottom: 10px;
@@ -127,16 +125,16 @@ body {
   }
 
   &__description {
-    margin: 0 20px;
+    margin: 0 20px 40px 0;
     font-weight: 400;
     font-size: 1.1rem;
-    margin-bottom: 40px;
   }
 
   &__no-svg {
     border-bottom: 1px solid rgb(5, 51, 184);
     color: rgb(5, 51, 184);
-    display: inline;
+    max-width: 90px;
+    margin: 0 auto;
     font-weight: 500;
   }
 
@@ -144,18 +142,15 @@ body {
     font-size: 3rem;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    justify-items: center;
     padding: 0 35px;
 
     @media screen and (max-width: 768px) {
-      justify-items: center;
-      padding: 0 200px;
+      max-width: 300px;
+      margin: 0 auto;
+      gap: 20px;
     }
   }
 }
-
-
-
 
 // -------------------------------------------
 // Tech Spec Section
@@ -168,8 +163,6 @@ body {
   // Potential issue from around here
   padding: 98px 30px;
   position: absolute;
-
-  
 
   &__list {
     display: grid;
@@ -194,6 +187,7 @@ body {
         width: 450px;
       }
     }
+
     @media screen and (max-width: 768px) {
       grid-template-columns: 1fr;
       padding: 0;
@@ -202,13 +196,20 @@ body {
         grid-column: 1 / 3;
         width: 100%;
       }
+
       .tech-spec-card:nth-child(2) {
         width: 100%;
-        grid-column: 1 / 3;
+        grid-column
+        : 1 / 3;
       }
+
       .tech-spec-card:last-child {
         width: 100%;
       }
     }
   }
 }
+
+// -------------------------------------------
+// Tech Spec Card
+// -------------------------------------------
